js262/test/language/comments/S7.4_A4_T4.js


/*---
info: Single and Multi line comments are used together
es5id: 7.4_A4_T4
description: Try to open Multi line comment at the end of Single comment
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();


x*/
